# multi_tracker

./: .gitignore  CMakeLists.txt  ERRORS.txt  README.md  TODO.txt  Vagrantfile  bootstrap.sh  install_opencv2.7_1604_source.sh  move_data.sh  package.xml  setup.py  setup.sql  setup_acquisition_dir.sh  setup_sql.sh  user_bootstrap.sh
example_config/: data_association_parameters.yaml  debug_flags.yaml  delta_video_parameters.yaml  kalman_parameters.py  liveviewer_parameters.yaml  pointgrey_blackfly.yaml  roi_finder.yaml  tracker_parameters.yaml
examples/data_processing/: example_data_processing.ipynb  example_data_processing_emily.ipynb
examples/data_processing/.ipynb_checkpoints/: example_data_processing-checkpoint.ipynb
examples/demo/demo_1/src/: TODO.txt  camera_parameters.yaml  data_association_parameters.yaml  debug_flags.yaml  delta_video_config.py  delta_video_only.launch  delta_video_parameters.yaml  home_directory.yaml  liveviewer_parameters.yaml  rectified_camera.launch  tracker_parameters.yaml  tracking.launch  tracking_launcher.launch  tracking_no_output.launch  troubleshoot_tracking.launch
examples/sample_data/: config_20160412_134708_N1.py  delete_cut_join_instructions.pickle  launch_delta_video.launch  launch_dv_no_pause.launch  new_unique_objids.pickle
launch/: conditional_debug_viewer.launch  delta_video_only.launch  detect_roi_tracking.launch  load_tracking_parameter_yamls.launch  play_delta_video.launch  pointgrey_cam.launch  ptgrey_tracking.launch  rectified_usb_cam.launch  save_delta_video.launch  single_tracking_pipeline.launch  snapshot_params.launch  tracking.launch  troubleshoot_tracking.launch  usb_roi_tracking.launch
msg/: CircularROI.msg  RectangularROI.msg
multi_tracker_analysis/: ERRORS.txt  Kalman.py  __init__.py  estimate_R_and_Q.py  plot.py  read_hdf5_file_to_pandas.py  stitch_trajectories_gui.py  trajectory_analysis.py  trajectory_editor  trajectory_viewer_gui_v2.py
nodes/: TODO.txt  conditional_debug_viewer.py  data_association.py  delta_video_player.py  delta_video_simplebuffer.py  difference_viewer.py  image_processing.py  liveviewer.py  record_user_input.py  roi_finder.py  rosbag_play_wrapper.py  save_bag.py  save_data_to_hdf5.py  set_basename.py  set_basename_and_path.py  set_original_basename.py  snapshot_params.py  tracker_simplebuffer.py
scripts/: analyze_incoming.sh  bag2avi.py  bag2vid.py  check_framerate.py  compress  copy_configs.py  hdf5_to_csv.py  merge_in_retracked.py  mk_date_dir.py  retrack  retrack.sh  retrack_ros  roi_stereotypy.py  track_incoming.sh
setup/: install.sh  install_ros.sh
srv/: RegisterROIs.srv
vagrant/: root_bootstrap.sh  root_finish_bootstrap.sh
