<?xml version="1.0"?>
<package>
  <name>multi_tracker</name>
  <version>0.0.1</version>
  <description>The multi_tracker package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="florisvb@gmail.com">Floris van Breugel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/multi_tracker</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="florisvb@gmail.com">Floris van Breugel</author>
  <author email="none@none.com">Steve Safarik</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- TODO is this still a dependency? -->
  <run_depend>geometry_msgs</run_depend>
  <!-- TODO is either of image_pipeline or image_geometry better for this purpose?
       see conflicting info in http://wiki.ros.org/opencv3 -->
  <run_depend>image_pipeline</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-h5py</run_depend>
  <run_depend>python-progressbar</run_depend>
  <run_depend>python-pandas</run_depend>
  <run_depend>python-scipy</run_depend>
  <!-- TODO does someone have a version of this up that doesn't install huge tex recommended packages? -->
  <run_depend>python-sympy</run_depend>
  <!-- <run_depend>python-pyqtgraph</run_depend> -->
  <!-- TODO use one of qt4/5 packages in repo? can replace pyqtgraph? otherwise add it to repo? -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
